<resources>
    <string name="app_name">Campus Recruitment System</string>
    <string name="campus">Campus</string>
    <string name="admin_login">Admin Login</string>
    <string name="student_login">Student Login</string>
    <string name="company_login">Company Login</string>

    <string name="admin_type">Admin</string>
    <string name="student_type">Student</string>
    <string name="company_type">Company</string>

    <string name="admin_login_info">admin_user_login_info</string>
    <string name="student_login_info">student_user_login_info</string>
    <string name="company_login_info">company_user_login_info</string>

    <string name="student_info">student_user_detail_Info</string>
    <string name="company_info">company_user_detail_info</string>

    <string name="student_resume">student_user_resume</string>

    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_error">Password\'s length is short.</string>
    <string name="password_not_matches">Password does not match.</string>
    <string name="auth_failed">Authentication Failed.</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="account_creation_succesful">Account creation successful.</string>
    <string name="account_info_name">Account Info</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="enter_student_id">Enter Student ID / Roll No.</string>
    <string name="enter_date_of_birth">Enter Date Of Birth</string>
    <string name="enter_marks">Enter CGPA / Percentage</string>
    <string name="select_students_gender">Please Select Student\'s Gender</string>
    <string name="student_male">Male</string>
    <string name="student_female">Female</string>
    <string name="save_and_continue">Save And Continue</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="enter_company_address">Enter Company Address</string>
    <string name="enter_student_phone_number">Enter Student Phone Number</string>
    <string name="enter_company_phone_number">Enter Company Phone Number</string>
    <string name="enter_company_web_page">Enter Company Web Page</string>
    <string name="vacancy_available">Vacancies Available:</string>
    <string name="user_not_found">User Not Found</string>
    <string name="error_upload_image">Error Uploading Image</string>
    <string name="student_profile_image_not_set">Student\'s Profile Image not set.</string>
    <string name="company_profile_image_not_set">Company Profile Image not set.</string>
    <string name="prefKey">USER_Info</string>
    <string name="prefType">USER_Type</string>
    <string name="settings_menu_item">Sign Out</string>
    <string name="student_id">studentID</string>
    <string name="company_name">companyName</string>
    <string name="student_dashboard">Student Dashboard</string>
    <string name="company_dashboard">Company Dashboard</string>
    <string name="vacancy_available_button">Apply</string>
    <string name="student_detail_info">Detail Student Information</string>
    <string name="company_detail_info">Detail Company Information</string>
    <string name="vacancy_available_apply">Vacancies Available: </string>
    <string name="apply">Apply</string>
    <string name="resume_sent_successfully">Resume Sent Successfully.</string>
    <string name="resume_sending_failed">Resume Sending Failed</string>
    <string name="list_of_applied_students">List Of Applied Students</string>
    <string name="list_of_students">List of Students</string>
    <string name="already_applied">Your application is sent,</string>
    <string name="want_to_cancel">cancel?</string>
    <string name="no_vacancies">No Vacancies Available.</string>
    <string name="resume_cancelled_successfully">Resume Cancelled Successfully.</string>
    <string name="cancel_student_resume">Cancel student\'s resume?</string>
    <string name="accept_students_resume">Accept student\'s resume.</string>
    <string name="not_sign_first">Don\'t have an account?</string>
    <string name="not_sign_second">Sign up now.</string>
    <string name="member_type_not_selected">Member Type Not Selected</string>
    <string name="user_node">user</string>
    <string name="notification">notification</string>
    <string name="application_rejected">Application Rejected</string>
    <string name="application_accepted_succesfully">Application Accepted Successfully.</string>
    <string name="accepted_student_application">accepted_student_applications</string>
    <string name="student_application_accepted">Student\'s resume was accepted.</string>
    <string name="resume_accepted">Your resume was accepted.</string>
    <string name="list_of_companies_with_vacancies">Companies with vacancy available.</string>
    <string name="list_of_companies">List of Companies</string>
    <string name="student_list">Student List</string>
    <string name="company_list">Company List</string>
    <string name="edit_student_record">Edit Student Record</string>
    <string name="delete_student_record">Delete Student Record</string>
    <string name="edit_company_record">Edit Company Record</string>
    <string name="delete_company_record">Delete Company Record</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="student_name">Student Name:</string>
    <string name="student_email">Student Email:</string>
    <string name="student_ids">Student ID:</string>
    <string name="student_date_of_birth">Student Date of Birth:</string>
    <string name="student_phone_number">Student Phone #:</string>
    <string name="student_cgpa">Student  CGPA:</string>
    <string name="company_names">Company Name:</string>
    <string name="company_email">Company Email:</string>
    <string name="company_address">Company Address:</string>
    <string name="company_phone_number">Company Phone #:</string>
    <string name="company_web_page">Company Web Page:</string>
    <string name="company_record_deletion_succesfull">Company Record Deletion Successful</string>

    <string-array name="member_type">
        <item>Student</item>
        <item>Company</item>
    </string-array>
</resources>
