<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.waqkz.campusrecruitmentsystem.AccountCreationFlow.SignUpFragment">

    <ScrollView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_email_sign_up"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_password_sign_up"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_password_confirm_sign_up"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/user_signup"
                android:text="@string/sign_up"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:background="#7986CB"
                android:textColor="#FFFFFF"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
