<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.waqkz.campusrecruitmentsystem.AccountCreationFlow.TitleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/hopkin_uni"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/admin_login"
                android:layout_width="130dp"
                android:layout_height="0dp"
                android:text="@string/admin_login"
                android:layout_marginBottom="8dp"
                android:background="#7986CB"
                android:textColor="#FFFFFF"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/student_login"
                android:layout_width="130dp"
                android:layout_height="0dp"
                android:text="@string/student_login"
                android:layout_marginBottom="8dp"
                android:background="#7986CB"
                android:textColor="#FFFFFF"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/company_login"
                android:layout_width="130dp"
                android:layout_height="0dp"
                android:text="@string/company_login"
                android:background="#7986CB"
                android:textColor="#FFFFFF"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
