<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="gone"
    android:id="@+id/company_detail_info_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/company_detail_name"
        android:inputType="text"
        android:paddingLeft="2dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/company_detail_email"
        android:inputType="text"
        android:paddingLeft="2dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/company_detail_address"
        android:inputType="text"
        android:paddingLeft="2dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/company_detail_phone_number"
        android:inputType="phone"
        android:paddingLeft="2dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/company_detail_web_page"
        android:inputType="phone"
        android:paddingLeft="2dp"
        android:paddingTop="16dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_marginTop="36dp"
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <LinearLayout
            android:id="@+id/admin_company_record_ui"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/edit_company_record"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:textColor="#7986CB"
                    android:gravity="center"
                    android:text="@string/edit_company_record"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#77cccccc"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:focusable="false"/>

            <LinearLayout
                android:id="@+id/delete_company_record"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:textColor="#FF5722"
                    android:gravity="center"
                    android:text="@string/delete_company_record"
                    android:id="@+id/textView" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vacancy_available_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:textColor="#7986CB"
                android:gravity="right"
                android:text="@string/vacancy_available"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:textSize="16sp"
                android:textColor="#FF5722"
                android:paddingLeft="8dp"
                android:gravity="left"
                android:text="@string/apply"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vacancy_available_cancellation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textColor="#7986CB"
                android:gravity="right"
                android:text="@string/already_applied"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="#FF5722"
                android:layout_marginLeft="6dp"
                android:gravity="left"
                android:text="@string/want_to_cancel"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/no_vacancy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:textColor="#FF5722"
                android:gravity="center"
                android:text="@string/no_vacancies"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/resume_accepted"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:textColor="#7986CB"
                android:gravity="center"
                android:text="@string/resume_accepted"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>